@@ -1,3 +1,7 @@
+1997-11-29  Daniel.Weaver
+
+	* charset.c, pad.c: ncurses-4.1-971220
+
 1997-11-07  Daniel.Weaver
 
 	* sync.c, fun.c, crum.c, modes.c, control.c, sysdep.c, output.c, tack.h:
